--- a/trash_collector/templates/home.html
+++ b/trash_collector/templates/home.html
@@ -10,7 +10,7 @@
 <br />
 <br />
 {% if user.is_authenticated %}
-  Hello User{{ user.username }}. You don't have a group assigned. Please contact administrator or attempt to register again.
+  Hello ee{{ user.username }}. You don't have a group assigned. Please contact administrator or attempt to register again.
   <p><a href="{% url 'logout' %}">Log Out</a></p>
 {% else %}
   <p>You are not logged in. Please log in or create an account.</p>
