fixed typos and import mistakes

--- a/trash_collector/employees/templates/employees/index.html
+++ b/trash_collector/employees/templates/employees/index.html
@@ -10,13 +10,21 @@
         Address: {{ logged_in_employee.address }} {{logged_in_employee.zip_code }}<br />
 
         <br />
-        <br />
 
         <br />
+        Your Customers with a matching zip code:
         <br />
 
-        <br />
-        <br />
+        {% for customers in zip_code_match %}
+          {{ customers.name }}
+        {% endfor %}
+
+
+{#  As a registered employee, I want my index view to be a list of today’s customers who meet ALL the following criteria:#}
+{#-	Customers in my zip code#}
+{#-	Pickup day is today’s day of week OR One-time pickup date that falls on today#}
+{#-	Non-suspended accounts#}
+{#-	Trash has not yet been picked up today    #}
 
 
   {% else %}
