--- a/trash_collector/employees/templates/employees/index.html
+++ b/trash_collector/employees/templates/employees/index.html
@@ -7,7 +7,8 @@
 {% block content %}
   {% if user.is_authenticated %}
         Hello {{ logged_in_employee.name }}!<br />
-        Address: {{ logged_in_employee.address }} {{logged_in_employee.zip_code }}<br />
+        Address: {{ logged_in_employee.address }} <br>
+        ZipCode: {{logged_in_employee.zip_code }}<br />
 
         <br />
 
@@ -15,14 +16,12 @@
         Your (non-suspended) Customers with a matching zip code and are needing a pickup today:
         <br />
 
-        {% for customers in zip_code_match %}
-            {% if customers.suspend_start >= today and customers.suspend_end <= today %}
-                {% if customers.weekly_pickup == day_of_week or customers.one_time_pickup == day_of_week %}
-                    {% if customers.date_of_last_pickup != today %}
-                        <li>{{ customers.name }} - {{ customers.address }} </li>
-                        {% endif %}
-                    {% endif %}
-            {% endif %}
+        {% for customers in customer_match %}
+
+
+                    <li>{{ customers.name }} - {{ customers.address }} </li>
+
+
         {% endfor %}
 
 
