--- a/trash_collector/employees/templates/employees/index.html
+++ b/trash_collector/employees/templates/employees/index.html
@@ -17,11 +17,21 @@
         <br />
       <form action="">
             {% for customers in customer_match %}
-                <br><li>{{ customers.name }} - {{ customers.address }} <button>Completed</button></li><br>
+                <form action="{% url 'employees:update_pickup' %}" method="post">
+                    {% csrf_token %}
+                    Name: <input type="hidden" name="name" id="name" value="{{ customers.name }}">
+                    Address: <input type="hidden" name="address" id="address" value="{{ customers.address }}">
+                    <input type="submit" value="Pickup Complete">
+                </form>
             {% endfor %}
 
             {% for customers in one_day_match %}
-                <br><li>{{ customers.name }} - {{ customers.address }} <button>Completed</button></li><br>
+                <form action="{% url 'employees:update_pickup' %}" method="post">
+                    {% csrf_token %}
+                    Name: <input type="hidden" name="name" id="name" value="{{ customers.name }}">
+                    Address: <input type="hidden" name="address" id="address" value="{{ customers.address }}">
+                    <input type="submit" value="Pickup Complete">
+                </form>
             {% endfor %}
       </form>
 
