--- a/trash_collector/employees/templates/employees/index.html
+++ b/trash_collector/employees/templates/employees/index.html
@@ -17,19 +17,20 @@
         <br />
       <form action="">
             {% for customers in customer_match %}
-                <form action="{% url 'employees:update_pickup' %}" method="post">
+                <form action="{% url 'employees:index' %}" method="post">
                     {% csrf_token %}
-                    Name: <input type="hidden" name="name" id="name" value="{{ customers.name }}">
-                    Address: <input type="hidden" name="address" id="address" value="{{ customers.address }}">
-                    <input type="submit" value="Pickup Complete">
+                    Name: <input type="name" name="name" id="name" value="{{ customers.name }}" disabled>
+                    Address: <input type="address" name="address" id="address" value="{{ customers.address }}" disabled>
+
+                    <input type="submit" value="Pickup Complete" >
                 </form>
             {% endfor %}
 
             {% for customers in one_day_match %}
-                <form action="{% url 'employees:update_pickup' %}" method="post">
+                <form action="{% url 'employees:index' %}" method="post">
                     {% csrf_token %}
-                    Name: <input type="hidden" name="name" id="name" value="{{ customers.name }}">
-                    Address: <input type="hidden" name="address" id="address" value="{{ customers.address }}">
+                    Name: <input type="hidden" name="name" id="name" value="{{ customers.name }}" disabled>
+                    Address: <input type="hidden" name="address" id="address" value="{{ customers.address }}" disabled>
                     <input type="submit" value="Pickup Complete">
                 </form>
             {% endfor %}
