further progress on button

--- a/trash_collector/employees/templates/employees/index.html
+++ b/trash_collector/employees/templates/employees/index.html
@@ -15,13 +15,12 @@
         <br />
         Your (non-suspended) Customers with a matching zip code and are needing a pickup today:
         <br />
-      <form action="">
+
             {% for customers in customer_match %}
                 <form action="{% url 'employees:index' %}" method="post">
                     {% csrf_token %}
                     Name: <input type="name" name="name" id="name" value="{{ customers.name }}" disabled>
-                    Address: <input type="hidden" name="address" id="address" value="{{ customers.address }}" disabled>
-                    ID: <input type="id" name="id" id="id" value="{{ customers.id }}" disabled>
+                    Address <input type="name" name="address" id="address" value="{{ customers.address }}" disabled>
 
                     <input type="submit" value="Pickup Complete" >
                 </form>
@@ -32,11 +31,9 @@
                     {% csrf_token %}
                     Name: <input type="hidden" name="name" id="name" value="{{ customers.name }}" disabled>
                     Address: <input type="hidden" name="address" id="address" value="{{ customers.address }}" disabled>
-                    ID: <input type="id" name="id" id="id" value="{{ customers.id }}" disabled>
                     <input type="submit" value="Pickup Complete">
                 </form>
             {% endfor %}
-      </form>
 
 
 
