--- a/trash_collector/employees/templates/employees/employee_base.html
+++ b/trash_collector/employees/templates/employees/employee_base.html
@@ -3,4 +3,5 @@
 {% block navbar %}
     <a class="nav-item nav-link" href="{% url 'employees:index' %}">Home</a>
     <a class="nav-item nav-link" href="{% url 'employees:edit_profile' %}">Edit Profile</a>
+    <a class="nav-item nav-link" href="{% url 'employees:weekday_pickup_search' %}">Weekday Pickup Search</a>
 {% endblock %}
