updated weekday search dropdown for default value

--- a/trash_collector/employees/templates/employees/weekday_pickup_search.html
+++ b/trash_collector/employees/templates/employees/weekday_pickup_search.html
@@ -30,6 +30,7 @@
             <label for="cars">Day of the week:</label>
 
                 <select name="days" id="days">
+                <option value="" selected disabled hidden>Select a day</option>
                 <option value="monday">Monday</option>
                 <option value="tuesday">Tuesday</option>
                 <option value="wednesday">Wednesday</option>
