--- a/trash_collector/employees/templates/employees/index.html
+++ b/trash_collector/employees/templates/employees/index.html
@@ -29,8 +29,7 @@
                         {% csrf_token %}
                             Name: <input type="name" name="name" id="name" value="{{ customer.name }}" readonly>
                             Address: <input type="address" name="address" id="address" value="{{ customer.address }}" readonly>
-                            Job Complete? <input type="radio" id="complete" name="complete" value="customer.update">
-                        <input type="submit" value="Update" >
+                            <input type="submit" value="Job Complete" >
                     </form>
 
                 {% endfor %}
@@ -41,7 +40,7 @@
                         {% csrf_token %}
                             Name: <input type="name" name="name" id="name" value="{{ customer.name }}" readonly>
                             Address: <input type="address" name="address" id="address" value="{{ customer.address }}" readonly>
-                            Job Complete? <input type="radio" id="complete" name="complete" value="customer.update">
+                            <input type="submit" value="Job Complete" >
                         <input type="submit" value="Update" >
                     </form>
                 {% endfor %}
