--- a/trash_collector/customers/templates/customers/index.html
+++ b/trash_collector/customers/templates/customers/index.html
@@ -1,18 +1,33 @@
 {% extends 'customers/customer_base.html' %}
 
+<head>
+  <title>garbage pickup </title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+
+
 {% block title %} Customer Home {% endblock %}
 
 {% block header %} Customer Portal {% endblock %}
 
+     <div class="container-fluid ">
+        <div>
 {% block content %}
   {% if user.is_authenticated %}
-        Hello {{ logged_in_customer.name }}!<br />
-        Address: {{ logged_in_customer.address }} {{logged_in_customer.zip_code }}<br />
+      Hello {{ logged_in_customer.name }}!<br />
+      </div>
+      <div class="d-flex justify-content-end ">
+        Address: {{ logged_in_customer.address }}
+        ZipCode: {{logged_in_customer.zip_code }}<br />
         Current balance: $ {{ logged_in_customer.balance }}.00
+      </div>
         <br />
         <br />
+          <div class='d-flex justify-content-center '>
         Your Weekly Pickup Day: {{ logged_in_customer.weekly_pickup }}
-        <br />
         <br />
         {% if logged_in_customer.one_time_pickup %}
           You have an extra pickup scheduled for {{ logged_in_customer.one_time_pickup }}
@@ -21,6 +36,7 @@
         <br />
         {% if today > logged_in_customer.suspend_start and today < logged_in_customer.suspend_end %}
           Your pickups are suspended until {{ logged_in_customer.suspend_end }}
+            </div>
         {% endif %}
 
   {% else %}
