boot strap added for better employee view

--- a/trash_collector/employees/templates/employees/index.html
+++ b/trash_collector/employees/templates/employees/index.html
@@ -24,7 +24,7 @@
         <br />
         <br />
                 <div class='d-flex justify-content-center '>
-
+        <div class="container-fluid">
         Your (non-suspended) Customers with a matching zip code and are needing a pickup today:
         <br />
         <br />
@@ -46,6 +46,7 @@
                             <input type="submit" value="Job Complete" >
                     </form>
                                 </div>
+                    </div>
 
                 {% endfor %}
 
