--- a/trash_collector/customers/templates/customers/index.html
+++ b/trash_collector/customers/templates/customers/index.html
@@ -44,4 +44,5 @@
     <a href="{% url 'login' %}">Log In</a>
     <a href="{% url 'accounts:register' %}">Sign Up</a>
   {% endif %}
+    </div>
 {% endblock %}
