fixed weekday search html to be more explanatory

--- a/trash_collector/employees/templates/employees/weekday_pickup_search.html
+++ b/trash_collector/employees/templates/employees/weekday_pickup_search.html
@@ -18,7 +18,7 @@
 
 
         <br />
-        To view the weekly schedule of your customers, choose your day below:
+        To view the weekly schedule of your customers, choose your day below (default is today):
 
         <br />
 
